# fpga-cpu-implementation

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
cpu15/: README.md  main.vhd
cpu15/components/: clk_enable_gen.vhd  constants.vhd  fetch.vhd  reset_sync.vhd  seg7_driver.vhd
cpu15/constraints/: constraint.xdc
cpu15/control_flow/: decode.vhd  execute.vhd  fetch.vhd
cpu15/devices/: ram.vhd  register.vhd
cpu15/simulations/: sim_clk_enable_gen.vhd  sim_decode.vhd  sim_execute.vhd  sim_fetch.vhd  sim_main.vhd  sim_ram.vhd  sim_reg.vhd
cpu_emulator/: README.md  config.py  example.py  main.py  pyproject.toml
cpu_emulator/assembler_parser/: __init__.py  grammer.lark  mnemonic.py  parser.py
cpu_emulator/bit_operation/: __init__.py  slice.py
cpu_emulator/models/: cpu_emulator.py  machine_state.py  state_updater.py
cpu_emulator/test/: test_bit_operation.py  test_cpu_emulator.py  test_parser.py
fpga_samples/7seg_countup/: main.vhd
fpga_samples/7seg_countup/constraints/: constraint.xdc
fpga_samples/adder_4bits/: adder_4bits.vhd
fpga_samples/adder_4bits/components/: full_adder.vhd  half_adder.vhd
fpga_samples/adder_4bits/constraints/: constraint.xdc
fpga_samples/adder_4bits/simulation/: sim.vhd
fpga_samples/half_adder/constraints/: constraint.xdc
